spacing-issue-done

--- a/src/components/NewComponents/breadcrumbsDR/breadcrumbsDR.module.css
+++ b/src/components/NewComponents/breadcrumbsDR/breadcrumbsDR.module.css
@@ -75,7 +75,7 @@
 
 @media screen and (max-width: 590px) {
   .BreadcrumbsDR {
-    padding: 26px 0px 24px 0px;
+    padding: 20px 0px 24px 0px;
     margin-top: 78px;
   }
   .breadCrumbHome {
